# rich-json-logs

./: .gitignore  .python-version  README.md  Taskfile.yaml  index.todo  main.py  pyproject.toml  requirements.txt
rich_json_logs/: log.py
samples/: bird.py  highlighers.py  highlight.py  logs.py  table.py
src/: highlighter.py  log.py
