[tool.poetry]
name = "rich-json-logs"
version = "0.1.0"
description = ""
authors = ["gsantoro <giuseppe.santoro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
click = "^8.1.3"
jsonpath-ng = "^1.5.3"
rich = "^12.6.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"